// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed state 1`] = `
.c7 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  margin: 0 0 24px 0;
  min-height: 40px;
  border: 2px solid;
  border-radius: 8px;
  border-color: #FF6257;
}

.c4 a {
  color: #FFFFFF;
}

.c5 {
  padding: 12px 16px;
  overflow: auto;
  word-break: break-word;
  display: flex;
  align-items: center;
  background: rgba(255, 98, 87, 0.1);
}

.c6 {
  border-radius: 50%;
  line-height: 0;
  margin-right: 16px;
  color: #000000;
  background: #FF6257;
  padding: 8px;
}

.c0 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c1 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c8 {
  box-sizing: border-box;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c17 {
  box-sizing: border-box;
}

.c21 {
  box-sizing: border-box;
  max-width: 500px;
  margin-bottom: 24px;
}

.c25 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c25:focus-visible,
.teleport-button__force-focus-visible .c25 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c25:hover,
.teleport-button__force-hover .c25 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c25:active,
.teleport-button__force-active .c25 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c25:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c22 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 16px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c18 {
  display: flex;
}

.c19 {
  display: flex;
  align-items: center;
}

.c23 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 50px;
  height: 80px;
  font-size: 16px;
  padding: 16px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background: inherit;
  margin-top: 4px;
  resize: vertical;
}

.c23::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c23:hover,
.c23:focus,
.c23:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c23:read-only {
  cursor: not-allowed;
}

.c23:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c12 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c15 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c13 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c14 {
  opacity: 1;
}

.c16 {
  opacity: 0.5;
}

.c24 {
  font-size: 14px;
  min-height: 100px;
}

<div>
  <div
    class="c0"
    style="position: relative;"
  >
    <div
      class="c1"
    >
      <h3
        class="c2"
      >
        loggedInUsername
         - add a review
      </h3>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="danger"
      >
        <div
          class="c5"
          kind="danger"
        >
          <div
            class="c6"
            kind="danger"
          >
            <span
              class="c7 icon icon-warning"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
                />
                <path
                  d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              server error
            </div>
          </div>
        </div>
      </div>
      <div
        class="c10 c11"
      >
        <label
          class="c12"
        >
          <input
            checked=""
            class="c13"
            name="DENIED"
            type="radio"
            value="DENIED"
          />
          <span
            class="c14"
          >
            Reject request
          </span>
        </label>
        <label
          class="c12"
        >
          <input
            class="c13"
            name="APPROVED"
            type="radio"
            value="APPROVED"
          />
          <span
            class="c14"
          >
            Approve short-term access
             (12 hours)
          </span>
        </label>
        <label
          class="c15"
        >
          <input
            class="c13"
            disabled=""
            name="PROMOTED"
            type="radio"
            value="PROMOTED"
          />
          <span
            class="c16"
          >
            <div
              class="c17 c18"
            >
              <div
                class="c17 c19"
              >
                <div
                  class="c20"
                >
                  Approve long-term access via Access List with the requested resources
                </div>
              </div>
            </div>
          </span>
        </label>
      </div>
      <div
        class="c21"
      >
        <label
          class="c22"
        >
          Message
          <textarea
            autocomplete="off"
            class="c23 c24"
            placeholder="Optional message..."
          />
        </label>
      </div>
      <button
        class="c25"
        fill="filled"
      >
        Submit Review
      </button>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c1 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c11 {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  max-width: 500px;
  margin-bottom: 24px;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c19:focus-visible,
.teleport-button__force-focus-visible .c19 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c19:hover,
.teleport-button__force-hover .c19 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c19:active,
.teleport-button__force-active .c19 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c19:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c16 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 16px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c5 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c12 {
  display: flex;
}

.c13 {
  display: flex;
  align-items: center;
}

.c17 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 50px;
  height: 80px;
  font-size: 16px;
  padding: 16px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background: inherit;
  margin-top: 4px;
  resize: vertical;
}

.c17::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c17:hover,
.c17:focus,
.c17:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c17:read-only {
  cursor: not-allowed;
}

.c17:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c6 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c9 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c7 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c8 {
  opacity: 1;
}

.c10 {
  opacity: 0.5;
}

.c18 {
  font-size: 14px;
  min-height: 100px;
}

<div>
  <div
    class="c0"
    style="position: relative;"
  >
    <div
      class="c1"
    >
      <h3
        class="c2"
      >
        loggedInUsername
         - add a review
      </h3>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <label
          class="c6"
        >
          <input
            checked=""
            class="c7"
            name="DENIED"
            type="radio"
            value="DENIED"
          />
          <span
            class="c8"
          >
            Reject request
          </span>
        </label>
        <label
          class="c6"
        >
          <input
            class="c7"
            name="APPROVED"
            type="radio"
            value="APPROVED"
          />
          <span
            class="c8"
          >
            Approve short-term access
             (12 hours)
          </span>
        </label>
        <label
          class="c9"
        >
          <input
            class="c7"
            disabled=""
            name="PROMOTED"
            type="radio"
            value="PROMOTED"
          />
          <span
            class="c10"
          >
            <div
              class="c11 c12"
            >
              <div
                class="c11 c13"
              >
                <div
                  class="c14"
                >
                  Approve long-term access via Access List with the requested resources
                </div>
              </div>
            </div>
          </span>
        </label>
      </div>
      <div
        class="c15"
      >
        <label
          class="c16"
        >
          Message
          <textarea
            autocomplete="off"
            class="c17 c18"
            placeholder="Optional message..."
          />
        </label>
      </div>
      <button
        class="c19"
        fill="filled"
      >
        Submit Review
      </button>
    </div>
  </div>
</div>
`;
